Bug 462053 - Can't unselect a Priority to see all.
Summary: Can't unselect a Priority to see all.
Status: RESOLVED FIXED
Alias: None
Product: kjournald
Classification: Applications
Component: Browser (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Andreas Cord-Landwehr
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-20 08:42 UTC by Justin Zobel
Modified: 2022-11-20 17:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2022-11-20 08:42:37 UTC
Just compiled and ran 0.1 after your email.

Once I click on a Priority radio button I can't then see all Priorities again, I must have one selected. Might be worth being checkboxes so I can untick all to see all or select a few I am interested in.
Comment 1 Andreas Cord-Landwehr 2022-11-20 08:56:07 UTC
Thanks for the report! I checked and can confirm that I also see journald log entries with missing PRIORITY data fields, which fully explains this problem. I will add a further priority level "no filter" to disable priority filtering. IMO it is more convenient to have radio buttons than to unselect multiple levels for fast error filtering.
Comment 2 Justin Zobel 2022-11-20 09:01:30 UTC
Sounds good, thanks!

On Sun, Nov 20, 2022 at 7:26 PM Andreas Cord-Landwehr
<bugzilla_noreply@kde.org> wrote:
>
> https://bugs.kde.org/show_bug.cgi?id=462053
>
> --- Comment #1 from Andreas Cord-Landwehr <cordlandwehr@kde.org> ---
> Thanks for the report! I checked and can confirm that I also see journald log
> entries with missing PRIORITY data fields, which fully explains this problem. I
> will add a further priority level "no filter" to disable priority filtering.
> IMO it is more convenient to have radio buttons than to unselect multiple
> levels for fast error filtering.
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 Andreas Cord-Landwehr 2022-11-20 17:15:50 UTC
Git commit e421cd292693e210d9a60d64deb098d252711ef6 by Andreas Cord-Landwehr.
Committed on 20/11/2022 at 17:12.
Pushed by cordlandwehr into branch 'master'.

Add option to fully disable priority filtering

M  +16   -4    lib/filtercriteriamodel.cpp
M  +2    -2    lib/filtercriteriamodel_p.h
M  +8    -4    lib/journaldviewmodel.cpp
M  +1    -1    lib/journaldviewmodel_p.h

https://invent.kde.org/system/kjournald/commit/e421cd292693e210d9a60d64deb098d252711ef6