Add option to fully disable priority filtering

BUG: 462053